Bug 429306 - Sidebar is missing in System Settings set to Icon View mode when I open a KCM via kickoff, krunner or icon on desktop
Summary: Sidebar is missing in System Settings set to Icon View mode when I open a KCM...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: iconview (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-18 14:28 UTC by Patrick Silva
Modified: 2020-11-19 15:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.4
Sentry Crash Report:


Attachments
System Settings without sidebar after the provided steps (77.04 KB, image/png)
2020-11-18 14:28 UTC, Patrick Silva
Details
System Settings with sidebar as expected (82.65 KB, image/png)
2020-11-18 14:29 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-18 14:28:17 UTC
Created attachment 133433 [details]
System Settings without sidebar after the provided steps

STEPS TO REPRODUCE
1. set System Settings to icon view mode
2. search for "mouse" kcm in kickoff or krunner and open it.
Or open a KCM via its icon added to desktop.
3. 

OBSERVED RESULT
System Settings opens without sidebar.
Compare the attached screenshots please.

EXPECTED RESULT
System Settings should open with sidebar

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.1
Comment 1 Patrick Silva 2020-11-18 14:29:11 UTC
Created attachment 133434 [details]
System Settings with sidebar as expected
Comment 2 Bug Janitor Service 2020-11-19 11:09:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/40
Comment 3 David Redondo 2020-11-19 15:26:06 UTC
Git commit 2d03f3ac64f0df74d4eb51a20e8282d5ddf5a83e by David Redondo.
Committed on 19/11/2020 at 11:09.
Pushed by ngraham into branch 'master'.

Also load category when opening startup module in icon mode

We should open it in a state like when the user navigated to it. For that
loadModule will now change the page if the requested module is already
loaded.

M  +5    -0    core/ModuleView.cpp
M  +7    -2    icons/IconMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/2d03f3ac64f0df74d4eb51a20e8282d5ddf5a83e
Comment 4 Nate Graham 2020-11-19 15:26:34 UTC
Git commit 3489e39ce5aafdf4d45bd89ffe3568cc791a9b14 by Nate Graham, on behalf of David Redondo.
Committed on 19/11/2020 at 15:26.
Pushed by ngraham into branch 'Plasma/5.20'.

Also load category when opening startup module in icon mode

We should open it in a state like when the user navigated to it. For that
loadModule will now change the page if the requested module is already
loaded.


(cherry picked from commit 2d03f3ac64f0df74d4eb51a20e8282d5ddf5a83e)

M  +5    -0    core/ModuleView.cpp
M  +7    -2    icons/IconMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/3489e39ce5aafdf4d45bd89ffe3568cc791a9b14