Also load category when opening startup module in icon mode

We should open it in a state like when the user navigated to it. For that
loadModule will now change the page if the requested module is already
loaded.
BUG: 429306


(cherry picked from commit 2d03f3ac64f0df74d4eb51a20e8282d5ddf5a83e)